Finish restyling landing page

--- a/app/landing/style.styl
+++ b/app/landing/style.styl
@@ -1,4 +1,6 @@
 .guitar-quest-landing
+  font-size 16px
+
   .guitar-background
     margin-top -23px
     margin-bottom -23px
@@ -11,18 +13,21 @@
     -o-background-size: cover
     background-repeat: no-repeat
     // height 640px
-    height 410px
+    // height 410px
+    height 615px
     border-bottom 2px solid #C6C6C6
     width: 100%
     // background-position: center top
 
   .title
-    font-weight 400
+    display inline-block
+    font-weight 300
     max-width: 470px
     character-spacing -1px
-    margin-top 30px
+    margin-top 115px
     margin-bottom 40px
     color white
+    line-height 52px
     // text-shadow: 2px 2px 3px rgba(0,0,0,0.6)
 
   .subtitle
@@ -31,23 +36,22 @@
 
   .action-btn
     margin-top 10px
-    width 470px
     max-width 100%
-    font-size 25px
-    text-transform none
+    font-size 18px
+    padding 15px 40px
 
   .landing-page-section
-    padding-top 27px
-    padding-bottom 27px
+    padding-top 50px
+    padding-bottom 70px
 
   .description-text
-    color #999999
-    font-size 15px
-    line-height 23px
+    color #6D6D6D
+    font-size 16px
+    line-height 25px
 
-  .how-it-works-icon
-    font-size 55px
-    margin-bottom 7px
+  // .how-it-works-icon
+    // font-size 55px
+    // margin-bottom 7px
 
   .details
     color #AD9F9E
@@ -67,9 +71,17 @@
 
   .section-title
     margin-bottom 50px
+    font-size 34px
+    font-weight 300
 
   .background-white
     background-color white
+
+  .background-dark-gray
+    background-color #3C3C3C
+
+  .background-light-gray
+    background-color #F9F7F7
 
   .resources
     font-size 16px
@@ -89,3 +101,81 @@
     text-align: center;
 
     font: 32px Arial, sans-serif;
+
+  .login-panel
+    margin-top 50px
+
+  .text-faded
+    color gray
+
+  .price-panels
+    margin-top 50px
+  //   padding 15px 25px
+
+  .pricing-title
+    font-size 20px
+    padding-bottom 10px
+    padding-top 10px
+
+  .pricing-price
+    // border-top 5px solid #2196f3;
+    color white
+    font-size 20px
+    background-color #2D9434
+    padding-top 15px
+    padding-bottom 15px
+
+  .border-bottom-blue
+    border-bottom 5px solid #2196f3
+
+  .pricing-warning
+    font-size 20px
+    background-color #FF9800
+    color white
+    padding-top 30px
+    padding-bottom 20px
+
+  .pricing-dollars
+    font-size: 30px;
+    font-weight: 300;
+
+  .pricing-name
+    color #2D9434
+    font-size: 15px;
+    text-transform uppercase
+    padding-top 10px
+    padding-bottom 10px
+    font-weight: 600
+
+  .features
+    margin-top 25px
+
+  .professional-panel
+    border 2px solid #FF9800
+
+  .divider
+    margin-top 15px
+    margin-bottom 15px
+
+  .text-white
+    color white
+
+  .section-subtitle
+    font-size 20px
+    font-weight 500
+
+  .price
+    font-size 31px
+    font-weight 500
+
+  .circle-around
+    display: block;
+    height: 60px;
+    width: 60px;
+    line-height: 60px;
+    -moz-border-radius: 30px; /* or 50% */
+    border-radius: 30px; /* or 50% */
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-size: 2em;
