Finish restyling landing page and login

--- a/app/landing/style.styl
+++ b/app/landing/style.styl
@@ -22,12 +22,13 @@
   .title
     display inline-block
     font-weight 300
-    max-width: 470px
+    max-width: 515px
     character-spacing -1px
     margin-top 115px
     margin-bottom 40px
     color white
-    line-height 52px
+    line-height 65px
+    font-size 48px
     // text-shadow: 2px 2px 3px rgba(0,0,0,0.6)
 
   .subtitle
@@ -41,8 +42,8 @@
     padding 15px 40px
 
   .landing-page-section
-    padding-top 50px
-    padding-bottom 70px
+    padding-top 30px
+    padding-bottom 50px
 
   .description-text
     color #6D6D6D
@@ -70,7 +71,7 @@
     margin-top 30px
 
   .section-title
-    margin-bottom 50px
+    margin-bottom 40px
     font-size 34px
     font-weight 300
 
@@ -119,33 +120,26 @@
 
   .pricing-price
     // border-top 5px solid #2196f3;
-    color white
+    color black
     font-size 20px
-    background-color #2D9434
+    // background-color #2D9434
     padding-top 15px
     padding-bottom 15px
 
   .border-bottom-blue
     border-bottom 5px solid #2196f3
 
-  .pricing-warning
-    font-size 20px
-    background-color #FF9800
-    color white
-    padding-top 30px
-    padding-bottom 20px
-
   .pricing-dollars
-    font-size: 30px;
-    font-weight: 300;
+    font-size: 35px;
+    font-weight: 400;
 
   .pricing-name
-    color #2D9434
-    font-size: 15px;
+    // color #2D9434
+    font-size: 14px;
     text-transform uppercase
     padding-top 10px
     padding-bottom 10px
-    font-weight: 600
+    font-weight: 500
 
   .features
     margin-top 25px
@@ -179,3 +173,9 @@
     color: white;
     text-align: center;
     font-size: 2em;
+
+  .price-subtext
+    margin-top: -15px;
+    margin-bottom: 20px;
+    font-size: 15px;
+    color: gray;
