--- a/app/log_in/style.styl
+++ b/app/log_in/style.styl
@@ -1,9 +1,15 @@
 .guitar-quest-login
   .title
     font-size 28px
-
-  .login-btn
-    margin-top 30px
+    font-weight 300
+    margin-bottom 30px
 
   .login-panel
     margin-top 50px
+
+  .padded-panel
+    padding 20px
+
+  .action-btn
+    margin-top 30px
+    margin-bottom 10px
