--- a/app/sign_up/style.styl
+++ b/app/sign_up/style.styl
@@ -16,10 +16,15 @@
 
   .title
     font-size 28px
+    font-weight 300
+    margin-bottom 30px
 
-  .create-account-btn
+  .action-btn
     margin-top 30px
     margin-bottom 10px
 
   .create-account-panel
     margin-top 50px
+
+  .padded-panel
+    padding 20px
