--- a/app/sign_up/template.jade
+++ b/app/sign_up/template.jade
@@ -4,7 +4,7 @@
       .row
         .col-sm-6.col-sm-offset-3.col-lg-4.col-lg-offset-4
           .create-account-panel.panel.panel-default
-            .panel-body
+            .panel-body.padded-panel
               h4.text-center.title Sign up for free
               alert(type='danger' ng-if='ctrl.error' close='ctrl.error = undefined') {{ctrl.error}}
               form(ng-submit='ctrl.register()')
@@ -12,4 +12,4 @@
                 input.form-control(id='lastName' type='text' placeholder='last name' ng-model='ctrl.form.lastName')
                 input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='ctrl.form.email')
                 input.form-control(type='password' placeholder='password' ng-model='ctrl.form.password')
-                button.create-account-btn.btn.btn-primary.btn-block(type='submit') Sign up
+                button.action-btn.btn.btn-primary.btn-block(type='submit') Sign up
