Small change in landing page copy

--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -72,7 +72,7 @@
 
   .landing-page-section.background-white
     .container
-      h3.section-title.text-center All the resources you need to learn
+      h3.section-title.text-center All the resources you need to learn, in one place
 
       .col-md-6.resources
         .row.resource
