Allow saving and editing card when checking out

--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -123,7 +123,7 @@
     .container
       h3.section-title.text-center Start with a free account, upgrade when you advance
       .col-sm-4.text-center
-        .price-panel.panel.panel-default.text-center
+        .pricing-panel.panel.panel-default.text-center
           .panel-heading.pricing-name Amateur Account
           .panel-body
             .pricing-dollars Free
@@ -135,7 +135,7 @@
             div Complete challenges
 
       .col-sm-4
-        .price-panel.panel.panel-default.text-center
+        .pricing-panel.panel.panel-default.text-center
           .panel-heading.pricing-name Professional Account
           .panel-body
             .pricing-dollars $35
@@ -148,7 +148,7 @@
             div Complete challenges
 
       .col-sm-4
-        .price-panel.panel.panel-default.text-center
+        .pricing-panel.panel.panel-default.text-center
           .panel-heading.pricing-name Private Lessons
           .panel-body
             .pricing-dollars $60
