--- a/app/subscribe_checkout/style.styl
+++ b/app/subscribe_checkout/style.styl
@@ -57,5 +57,8 @@
   .panel-footer-white
     background-color white
 
+  .checkout-container
+    margin-top 5px
+
   // .checkout
   //   background-color white
