--- a/local_modules/styles/index.styl
+++ b/local_modules/styles/index.styl
@@ -56,3 +56,37 @@
   font-size 13px
   &:hover
     text-decoration none
+
+.panel-footer-white
+  background-color white
+
+// Pricing
+.pricing-panel
+  text-align center
+  font-size 16px
+
+  .divider
+    margin-top 15px
+    margin-bottom 15px
+
+  .pricing-name
+    // color #2D9434
+    font-size: 14px;
+    text-transform uppercase
+    padding-top 10px
+    padding-bottom 10px
+    font-weight: 500
+
+  .pricing-dollars
+    font-size: 35px;
+    font-weight: 400;
+
+  .price-subtext
+    margin-top: -15px;
+    margin-bottom: 20px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #A9A9A9
+
+  .pricing-description
+    margin-bottom 30px
