--- a/app/subscribe_checkout/review/template.jade
+++ b/app/subscribe_checkout/review/template.jade
@@ -5,7 +5,7 @@
         .panel-heading.clearfix
           .panel-title.pull-left
             span Your Payment
-          a.btn-flat.pull-right(href='' ui-sref='subscribeCheckout.editPayment') Edit
+          a.btn-flat.pull-right(href='' ui-sref='subscribeCheckout.payment') Edit
         .panel-body
           gq-card-summary(card='ctrl.card')
 
