--- a/app/pieces/template.jade
+++ b/app/pieces/template.jade
@@ -22,7 +22,7 @@
         value="(ctrl.levelPoints.completed / ctrl.levelPoints.total) * 100"
       )
 
-  .row(ng-if='true')
+  .row(ng-if='!ctrl.userCanLearnPieces')
     .col-sm-6.col-sm-offset-3.col-md-4.col-md-offset-4
       .panel.panel-primary.pricing-panel
         .panel-heading.pricing-name Professional Account
@@ -32,7 +32,7 @@
           .pricing-description You cannot access these pieces with a free account. Upgrade to a professional account to advance up to level 8, the highest level.
           a.btn.btn-primary.btn-block(href='' ui-sref='subscribeCheckout.payment') upgrade now
 
-  .row(ng-if='false')
+  .row(ng-if='ctrl.userCanLearnPieces')
     .col-sm-4.piece(ng-repeat='piece in ctrl.pieces')
       .piece-panel.panel.panel-default(
         ui-sref='guitarQuest.piece({pieceId: piece._id})'
