Submit comment and grade in a single request

--- a/app/pieces/style.styl
+++ b/app/pieces/style.styl
@@ -3,7 +3,8 @@
     cursor pointer
   .previous-and-next
     cursor pointer
-    font-size 12px
+    font-size 14px
+    font-weight 500
   .piece-title
     margin 0px
     margin-bottom 5px
