--- a/app/review_submitted_piece/style.styl
+++ b/app/review_submitted_piece/style.styl
@@ -49,9 +49,8 @@
     margin-bottom 5px
     width 60px
 
-  .submit-grade-btn
-    margin-top 10px
-    margin-top 10px
+  .margin-top
+    margin-top 15px
 
   .percent
     margin-top 10px
