--- a/local_modules/directives/gq_log_in_form/template.jade
+++ b/local_modules/directives/gq_log_in_form/template.jade
@@ -1,5 +1,5 @@
 .gq-sign-up-form
-  alert(type='danger' ng-if='ctrl.error' close='ctrl.error = null') {{ctrl.error}}
+  uib-alert(type='danger' ng-if='ctrl.error' close='ctrl.error = null') {{ctrl.error}}
   form(ng-submit='ctrl.submit()')
     input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='ctrl.form.email')
     input.form-control(type='password' placeholder='password' ng-model='ctrl.form.password')
