--- a/local_modules/directives/gq_notifications/style.styl
+++ b/local_modules/directives/gq_notifications/style.styl
@@ -1,4 +1,4 @@
-.gq-alerts
-  .alerts
-    .alert:not(:last-child)
-      margin-bottom 15px
+// .gq-notifications
+//   .alerts
+//     .alert:not(:last-child)
+//       margin-bottom 15px
