--- a/app/manage_pieces/style.styl
+++ b/app/manage_pieces/style.styl
@@ -15,7 +15,7 @@
     top 18px
   .piece-era
     margin-top -5px
-  .panel-progressbar
+  .panel-uib-progressbar
     margin-bottom 0px
   .panel-details
     font-weight italic
