--- a/local_modules/styles/index.styl
+++ b/local_modules/styles/index.styl
@@ -56,6 +56,8 @@
   font-size 13px
   &:hover
     text-decoration none
+  &:focus
+    text-decoration none
 
 .panel-footer-white
   background-color white
